--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body {
-  background-color: rgb(185, 185, 185);
+  background-color: rgb(227, 191, 133);
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
   font-size: 75%;
   font-family: "Press Start 2P", cursive;
 }
@@ -24,7 +26,7 @@ body {
 }
 .selector {
   margin: 20px;
-  width: 40px;
+  width: 45px;
   height: 30px;
 }
 .btn-send {
@@ -43,4 +45,26 @@ body {
   background-color: rgb(7, 83, 158);
   color: white;
   cursor: pointer;
+}
+
+.road {
+  width: 100%;
+  height: 15%;
+  background-color: rgb(154, 153, 153);
+  margin: 5px;
+  border-top: 4px solid white;
+  border-bottom: 4px solid white;
+}
+
+.vehicles {
+  margin-left: 0px;
+  height: 90%;
+  width: 10%;
+  /* animation-name: carrera; */
+  animation-duration: 5s;
+}
+
+@keyframes carrera {
+  0% {margin-left: 0%;}
+  100% {margin-left: 90%;}
 }
