--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ body {
   cursor: pointer;
 }
 
+.menu-carrera {
+  width: 100%;
+  height: 20%;
+  text-align: center;
+}
+
 .road {
   width: 100%;
   height: 15%;
@@ -61,7 +67,7 @@ body {
   height: 90%;
   width: 10%;
   /* animation-name: carrera; */
-  animation-duration: 5s;
+  /* animation-duration: 5s; */
 }
 
 @keyframes carrera {
