--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   font-size: 75%;
   font-family: "Press Start 2P", cursive;
 }
+
 .menu {
   width: 100%;
   height: 100px;
@@ -53,9 +54,18 @@ body {
   text-align: center;
 }
 
+.dorsal {
+  font-size: 0.8rem;
+  margin-right: 0px;
+  width: 5%;
+  color: white;
+}
+
 .road {
+  display: flex;
+  flex-direction: row;
   width: 100%;
-  height: 15%;
+  height: 75px;
   background-color: rgb(154, 153, 153);
   margin: 5px;
   border-top: 4px solid white;
@@ -64,13 +74,17 @@ body {
 
 .vehicles {
   margin-left: 0px;
-  height: 90%;
-  width: 10%;
-  
+  height: 80%;
+  width: 12%;
 }
 
 .vehicles-racing {
   animation-name: carrera;
+}
+
+.posiciones p{
+  font-size: 0.9rem;
+  text-align: center;
 }
 
 @keyframes carrera {
