--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
   background-color: rgb(227, 191, 133);
 }
-
+/* Estilos generales */
 .container {
   display: flex;
   flex-direction: column;
   font-size: 75%;
   font-family: "Press Start 2P", cursive;
 }
-
+/* Estilo del menu principal y sus elementos */
 .menu {
   width: 100%;
   height: 100px;
@@ -30,16 +30,16 @@ body {
   width: 45px;
   height: 30px;
 }
+/* Estilos para los botones de la aplicacion */
 .btn-send {
   font-family: "Stick", sans-serif;
   font-size: 1.2rem;
   font-weight: bold;
   background-color: rgb(95, 165, 236);
   width: 15%;
-  height: 40px;
   border-radius: 12px;
   border: 3px solid rgb(0, 0, 0);
-  margin: 15px;
+  margin: 8px;
 }
 
 .btn-send:hover {
@@ -47,46 +47,47 @@ body {
   color: white;
   cursor: pointer;
 }
-
+/* Estilo para la pantalla de juego */
 .menu-carrera {
   width: 100%;
   height: 20%;
   text-align: center;
 }
-
+/* Estilos para los dorsales en pista */
 .dorsal {
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   margin-right: 0px;
-  width: 5%;
-  color: white;
+  width: 100%;
+  color: black;
+  text-align: center;
 }
-
+/* Estilo para el div de carretera */
 .road {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 75px;
+  height: 50px;
   background-color: rgb(154, 153, 153);
-  margin: 5px;
+  margin: 2px;
   border-top: 4px solid white;
   border-bottom: 4px solid white;
 }
-
+/* Estilos para los coches */
 .vehicles {
   margin-left: 0px;
-  height: 80%;
-  width: 12%;
+  height: 74%;
+  width: 7%;
 }
-
+/* Estilo que contiene la animacion */
 .vehicles-racing {
   animation-name: carrera;
 }
-
+/* Estilo para la lista de posiciones final */
 .posiciones p{
   font-size: 0.9rem;
   text-align: center;
 }
-
+/* Esta es la animacion */
 @keyframes carrera {
   0% {margin-left: 0%;}
   100% {margin-left: 90%;}
